--- a/src/css/home.css
+++ b/src/css/home.css
@@ -25,33 +25,38 @@
 
 .homeNavbarAndProductGridParen{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width:100%;
   gap: 10px;
 }
 
 .productGrid{
-  display: grid;
-  grid-template-columns:repeat(5,1fr) ;
-  column-gap: 10px;
+  display: flex;
+  flex-direction: column;
   row-gap: 10px;
-
   width: 100%;
+}
+
+.products-row-parent{
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+
+}
+.products-horizontal-list{
+  display:flex;
+  padding:0px;
+  flex-direction:row;
+  list-style:none;
+  gap:10px;
+  width:100%;
+  overflow:auto;
 }
 
 .product{
   position: relative;
   height: 250px;
+  width: 250px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  overflow: hidden;
-}
-
-/* .product:hover{
- height: 520px;
- width: 520px;
- transition-delay: 1s;
- transition-duration: 1s;
-} */
+ }
 
 .productImage{
   position: absolute;
