--- a/src/css/shoppingcart.css
+++ b/src/css/shoppingcart.css
@@ -1,53 +1,59 @@
 .mainParentShoppingCart{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 10px;
   margin: 20px;
 }
 
 .savedProductsParent{
   display: flex;
-  height: 100%;
-  position: absolute;
-  flex-direction: column;
+  height: fit-content;
+  flex-direction: row;
   padding: 0;
-  width: fit-content;
-  row-gap: 10px;
+  width:100%;
+  gap: 10px;
   overflow: auto;
   list-style: none;
-  right:  0%;
-  border-style: ridge;
 }
 
 .savedProduct{
+  display: flex;
+  flex-direction: column;
   height: fit-content;
   width: fit-content;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.savedProductDeleteIcon{
+  position: absolute;
+  opacity: 0;
+}
+
+.savedProduct:hover > .savedProductDeleteIcon{
+  opacity: 1;
+  transition-duration: 0.5s;
 }
 
 .savedProductImage{
   width: 250px;
   height:200px;
 }
+
 .clickedSavedProduct{
   display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
+  flex-direction: row;
+  width: fit-content;
 }
 
 .clickedImg{
   width: 500px;
-  height: 500px;
-  align-self: center;
+  height: 100%;
 }
-
 
 .clickedProductCard{
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+ display: flex;
+ flex-direction: column;
+ height: fit-content;
+ margin-inline-start: 10px;
+ font-family: sans-serif;
 }
-
-
